[tool.poetry]
name = "sphinx-seibootcamps"
version = "0.1.0"
description = ""
authors = ["Ashley Trinh <itsashley@hey.com>"]
readme = "README.md"
packages = [{ include = "sphinx_seibootcamps", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
sphinx = "^6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
myst-parser = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
