[tool.poetry]
name = "sphinx-seibootcamps"
version = "0.1.0"
description = ""
authors = ["Ashley Trinh <itsashley@hey.com>"]
readme = "README.md"
license = "MPL 2.0"
packages = [{ include = "sphinx_seibootcamps", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10, <4"
sphinx = ">=6, <8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
myst-parser = "^1.0.0"
pre-commit = "^3.4.0"

[tool.poetry.group.lsp]
optional = true

[tool.poetry.group.lsp.dependencies]
esbonio = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
